compiler/tests/compile-fail/missing-module.arret
(import []) ;~ ERROR module name requires a least two elements
(import [just-one]) ;~ ERROR module name requires a least two elements
(import [package does not exist]) ;~ ERROR package not found
(import [stdlib module does not exist]) ;~ ERROR module not found